<chore>api postman으로 로그아웃 기능까지 확인 완료. 시큐리티 member만 허용.